added changePassword method
